plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'com.github.davidmc24.gradle.plugin.avro' version '1.3.0'
}

group = 'me.hl'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'


repositories {
	maven{
		url 'https://packages.confluent.io/maven/'
	}
	mavenCentral()
}

ext {
	set('springCloudVersion', "2021.0.3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.apache.avro:avro:1.11.0'
	implementation 'io.confluent:kafka-avro-serializer:7.1.1'
	implementation 'org.apache.kafka:kafka-clients'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

generateAvroJava {
	source("${projectDir}/src/main/resources/avro")
}

avro {
	createSetters = false
	fieldVisibility = 'PRIVATE'
}

tasks.named("compileJava").configure {
	source(generateAvroJava)
}

tasks.named('test') {
	useJUnitPlatform()
}
